@@ -1,16 +1,16 @@
 /*
  * Copyright 2006-2020 The MZmine Development Team
- * 
+ *
  * This file is part of MZmine.
- * 
+ *
  * MZmine is free software; you can redistribute it and/or modify it under the terms of the GNU
  * General Public License as published by the Free Software Foundation; either version 2 of the
  * License, or (at your option) any later version.
- * 
+ *
  * MZmine is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even
  * the implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General
  * Public License for more details.
- * 
+ *
  * You should have received a copy of the GNU General Public License along with MZmine; if not,
  * write to the Free Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA 02110-1301
  * USA
@@ -22,15 +22,12 @@ import java.io.IOException;
 import java.util.Arrays;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-
 import io.github.mzmine.datamodel.Feature;
 import io.github.mzmine.datamodel.IonizationType;
 import io.github.mzmine.datamodel.IsotopePattern;
 import io.github.mzmine.datamodel.PeakIdentity;
 import io.github.mzmine.datamodel.PeakList;
 import io.github.mzmine.datamodel.PeakListRow;
-import io.github.mzmine.gui.Desktop;
-import io.github.mzmine.gui.HeadLessDesktop;
 import io.github.mzmine.main.MZmineCore;
 import io.github.mzmine.modules.MZmineProcessingStep;
 import io.github.mzmine.modules.tools.isotopepatternscore.IsotopePatternScoreCalculator;
@@ -48,7 +45,7 @@ import io.github.mzmine.util.SortingProperty;
 public class PeakListIdentificationTask extends AbstractTask {
 
   // Logger.
-  private static final Logger LOG = Logger.getLogger(PeakListIdentificationTask.class.getName());
+  private static final Logger logger = Logger.getLogger(PeakListIdentificationTask.class.getName());
 
   // Minimum abundance.
   private static final double MIN_ABUNDANCE = 0.001;
@@ -69,7 +66,7 @@ public class PeakListIdentificationTask extends AbstractTask {
 
   /**
    * Create the identification task.
-   * 
+   *
    * @param parameters task parameters.
    * @param list feature list to operate on.
    */
@@ -117,11 +114,11 @@ public class PeakListIdentificationTask extends AbstractTask {
         setStatus(TaskStatus.PROCESSING);
 
         // Create database gateway.
-        gateway = db.getModule().getGatewayClass().newInstance();
+        gateway = db.getModule().getGatewayClass().getDeclaredConstructor().newInstance();
 
         // Identify the feature list rows starting from the biggest
         // peaks.
-        final PeakListRow[] rows = peakList.getRows();
+        final PeakListRow[] rows = peakList.getRows().toArray(PeakListRow[]::new);
         Arrays.sort(rows, new PeakListRowSorter(SortingProperty.Area, SortingDirection.Descending));
 
         // Initialize counters.
@@ -140,7 +137,7 @@ public class PeakListIdentificationTask extends AbstractTask {
       } catch (Throwable t) {
 
         final String msg = "Could not search " + db;
-        LOG.log(Level.WARNING, msg, t);
+        logger.log(Level.WARNING, msg, t);
         setStatus(TaskStatus.ERROR);
         setErrorMessage(msg + ": " + ExceptionUtils.exceptionToString(t));
       }
@@ -149,7 +146,7 @@ public class PeakListIdentificationTask extends AbstractTask {
 
   /**
    * Search the database for the peak's identity.
-   * 
+   *
    * @param row the feature list row.
    * @throws IOException if there are i/o problems.
    */
@@ -166,7 +163,7 @@ public class PeakListIdentificationTask extends AbstractTask {
 
     // Calculate mass value.
 
-    final double massValue = row.getAverageMZ() * (double) charge - ionType.getAddedMass();
+    final double massValue = row.getAverageMZ() * charge - ionType.getAddedMass();
 
     // Isotope pattern.
     final IsotopePattern rowIsotopePattern = bestPeak.getIsotopePattern();
@@ -191,8 +188,8 @@ public class PeakListIdentificationTask extends AbstractTask {
         // First modify the formula according to ionization.
         final String adjustedFormula = FormulaUtils.ionizeFormula(formula, ionType, charge);
 
-        LOG.finest("Calculating isotope pattern for compound formula " + formula + " adjusted to "
-            + adjustedFormula);
+        logger.finest("Calculating isotope pattern for compound formula " + formula
+            + " adjusted to " + adjustedFormula);
 
         // Generate IsotopePattern for this compound
         final IsotopePattern compoundIsotopePattern = IsotopePatternCalculator
@@ -208,9 +205,6 @@ public class PeakListIdentificationTask extends AbstractTask {
 
       // Add the retrieved identity to the feature list row
       row.addPeakIdentity(compound, false);
-
-      // Notify the GUI about the change in the project
-      MZmineCore.getProjectManager().getCurrentProject().notifyObjectChanged(row, false);
 
     }
   }
